# ListManager

./: .gitignore  README.md  gui.py  listmanager_gui.spec  pyproject.toml  run_merge.py
ListInput/: BrandonSchools.xlsx  ByronSchools.xlsx  ClarkstonSchools.xlsx
examples/converted_outputs/: Byron DEEP eligible 01 15 2026_converted.xlsx  Graduate Programs PA bulk mail postcards 2026-05-12 and 2026-05-19_converted.xlsx  MailingListTemplate_converted.xlsx  Orientation Invite List 5-18_converted.xlsx  SVA Nominated Students 5.5.26_converted.xlsx  SVA Nominated Students 6.4.26_converted.xlsx  SVA Nominated Students 6.4.26_template_ready.xlsx  SVA Past Students Early June 2026_converted.xlsx  SVA Past Students Early May 2026 - with states_converted.xlsx  Swartz Creek UM DEEP eligibility list for letters 12 16 2025_converted.xlsx  UG Admitted FTIAC FA No ORN April PC-2026-04-07-15-17-20_converted.xlsx  company_messy_converted.xlsx  headerless_students_converted.xlsx
examples/messy_inputs/: company_messy.xlsx  headerless_students.xlsx
resources/zip_lookup/: build_report.txt  us_zip_state_lookup.csv
src/listmanager/: __init__.py  cli.py  config.py  gui.py  template_export.py
src/listmanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/listmanager/core/: __init__.py  dbf_breakdown.py  io.py  merge.py  normalize.py  validate.py
src/listmanager/dedupe/: __init__.py  engine.py
tests/: test_dedupe_engine.py  test_format_checker.py  test_gui_dedupe.py  test_gui_template_export.py  test_template_export.py  test_zip_lookup.py
(+13 files in other folders)
