[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listmanager"
version = "0.1.0"
description = "Tools to merge and validate mailing list spreadsheets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "PySide6>=6.6",
    "dbfread>=2.0",
    "qt-material>=2.14",
    "pyqtdarktheme>=1.4",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.3"]

[project.scripts]
listmanager-cli = "listmanager.cli:main"
listmanager-gui = "listmanager.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
