[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listmanager"
version = "0.1.0"
description = "Tools to merge and validate mailing list spreadsheets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "openpyxl>=3.1",
    "dbfread>=2.0",
    "xlrd>=2.0",
]

[tool.setuptools.package-data]
listmanager = ["zip_lookup/README.md"]

[project.optional-dependencies]
build = ["pyinstaller>=6.3"]

[project.scripts]
listmanager-cli = "listmanager.cli:main"
listmanager-gui = "listmanager.gui:main"
listmanager-convert = "listmanager.format_checker.convert:main"
listmanager-template-export = "listmanager.template_export:main"

[tool.setuptools.packages.find]
where = ["src"]
